--- a/index.html
+++ b/index.html
@@ -32,10 +32,15 @@
                     </div>
                 </div>
             </nav>
+            <hr>
         </section>
         <!-- navbar ends -->
     </header>
     <main>
+        <!-- category starts  -->
+        <section id="categoryContainer" class="container d-flex flex-row ">
+        </section>
+        <!-- category ends  -->
 
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
