--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
         <section id="categoryContainer" class="container d-flex flex-row ">
         </section>
         <!-- category ends  -->
+        <!-- card news starts  -->
+        <section id="newsContainer" class="container mt-3 gap-3">
+            <div>
+
+            </div>
+        </section>
+        <!-- card news ends  -->
 
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
