--- a/index.html
+++ b/index.html
@@ -44,10 +44,26 @@
         <!-- card news starts  -->
         <section id="newsContainer" class="container mt-3 gap-3">
             <div>
-
             </div>
         </section>
         <!-- card news ends  -->
+        <section>
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Details</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            This is a modal.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
