--- a/blog.html
+++ b/blog.html
@@ -43,18 +43,17 @@
                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
                         data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
                         aria-controls="panelsStayOpen-collapseOne">
-                        Accordion Item #1
+                        What is the difference between var, let, and const?
                     </button>
                 </h2>
                 <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
                     aria-labelledby="panelsStayOpen-headingOne">
                     <div class="accordion-body">
-                        <strong>This is the first item's accordion body.</strong> It is shown by default, until the
-                        collapse plugin adds the appropriate classes that we use to style each element. These classes
-                        control the overall appearance, as well as the showing and hiding via CSS transitions. You can
-                        modify any of this with custom CSS or overriding our default variables. It's also worth noting
-                        that just about any HTML can go within the <code>.accordion-body</code>, though the transition
-                        does limit overflow.
+                        <strong>The scope of a var variable is functional scope. The scope of a let variable is block
+                            scope. The scope of a const variable is block scope.</strong><code> var</code> can be
+                        updated and
+                        re-declared into the scope. <code>let </code> can be updated but cannot be re-declared into
+                        the scope. <code>const</code> cannot be updated or re-declared into the scope.
                     </div>
                 </div>
             </div>
@@ -63,18 +62,43 @@
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
                         aria-controls="panelsStayOpen-collapseTwo">
-                        Accordion Item #2
+                        Difference between arrow function and regular function.
                     </button>
                 </h2>
                 <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
                     aria-labelledby="panelsStayOpen-headingTwo">
                     <div class="accordion-body">
-                        <strong>This is the second item's accordion body.</strong> It is hidden by default, until the
-                        collapse plugin adds the appropriate classes that we use to style each element. These classes
-                        control the overall appearance, as well as the showing and hiding via CSS transitions. You can
-                        modify any of this with custom CSS or overriding our default variables. It's also worth noting
-                        that just about any HTML can go within the <code>.accordion-body</code>, though the transition
-                        does limit overflow.
+                        <table class="table table align-middle">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Arrow Function</th>
+                                    <th scope="col">Regular Function</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>The behavior of <code>.this</code> inside of an arrow function differs
+                                        considerably from the regular function's <code>.this</code> behavior. The arrow
+                                        function doesn't define its own execution context. No matter how or where being
+                                        executed, <code>.this</code> value inside of an arrow function always equals
+                                        <code>.this</code> value from the outer function. In other words, the arrow
+                                        function resolves <code>.this</code> lexically
+                                    </td>
+                                    <td>Inside of a regular JavaScript function, <code>.this</code> value is dynamic.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>A consequence of <code>.this</code> resolved lexically is that an arrow function
+                                        cannot be used as a constructor.</td>
+                                    <td>The regular function can easily construct objects.</td>
+                                </tr>
+                                <tr>
+                                    <td>The arrow functions are only callable and not constructible.</td>
+                                    <td>Regular functions are constructible, they can be called using the new keyword.
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
@@ -83,18 +107,39 @@
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
                         aria-controls="panelsStayOpen-collapseThree">
-                        Accordion Item #3
+                        Difference between map, forEach, filter, find.
                     </button>
                 </h2>
                 <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
                     aria-labelledby="panelsStayOpen-headingThree">
                     <div class="accordion-body">
-                        <strong>This is the third item's accordion body.</strong> It is hidden by default, until the
-                        collapse plugin adds the appropriate classes that we use to style each element. These classes
-                        control the overall appearance, as well as the showing and hiding via CSS transitions. You can
-                        modify any of this with custom CSS or overriding our default variables. It's also worth noting
-                        that just about any HTML can go within the <code>.accordion-body</code>, though the transition
-                        does limit overflow.
+                        Foreach takes a callback function and run that callback function on each element of array one by
+                        one. Basically forEach works as a traditional for loop looping over the array and providing you
+                        array elements to do operations on them.<br>
+                        The main difference between forEach and filter is that forEach just loop over the array and
+                        executes the callback but filter executes the callback and check its return value.<br>
+                        Map like filter & foreach takes a callback and run it against every element on the array but
+                        whats makes it unique is it generate a new array based on your existing array.<br>
+                        When you want to select a single element from an array use find.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="panelsStayOpen-headingFour">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false"
+                        aria-controls="panelsStayOpen-collapseFour">
+                        Why do we use template string in JavaScript?
+                    </button>
+                </h2>
+                <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse"
+                    aria-labelledby="panelsStayOpen-headingFour">
+                    <div class="accordion-body">
+                        Image result for Why we will use template string?
+                        Template strings are a powerful feature of modern JavaScript released in ES6. It lets us
+                        insert/interpolate variables and expressions into strings without needing to concatenate like in
+                        older versions of JavaScript. It allows us to create strings that are complex and contain
+                        dynamic elements.
                     </div>
                 </div>
             </div>
