--- a/index.html
+++ b/index.html
@@ -57,14 +57,19 @@
                             <h5 class="modal-title" id="exampleModalLabel">Details</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
-                        <div class="modal-body">
+                        <div id="modalBody" class="modal-body">
                             This is a modal.
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-
+        <section id="spinner" class="container d-none">
+            <div class="d-flex align-items-center">
+                <strong>Loading...</strong>
+                <div class="spinner-border ms-auto" role="status" aria-hidden="true"></div>
+            </div>
+        </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
