--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <section class="container">
             <nav class="navbar navbar-expand-lg bg-light">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="index.html">News Portal Web</a>
+                    <a class="navbar-brand" href="index.html">Daily News</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
